# python_serverless_housefire

./: .env.example  .gitignore  README.md  default.nix  flake.nix  pyproject.toml
docs/: zero_to_hundred.md
housefire/: cli.py  config.py  dependency.py  logger.py  main.py  scraper.py  transformer.py  utils.py
housefire/dependency/: dependency.py  google_maps.py  housefire_api.py
housefire/dependency/housefire_client/: client.py  geocode.py  housefire_object.py  property.py
housefire/scraper/: scraper.py  scraper_factory.py
housefire/scraper/reits_by_ticker/: dlr.py  eqix.py  pld.py  spg.py  well.py
housefire/test/: test_cli.py  test_config.py  test_logger.py
housefire/transformer/: geocode_transformer.py  transformer.py  transformer_factory.py
housefire/transformer/reits_by_ticker/: dlr.py  eqix.py  pld.py  spg.py  well.py
